--- a/docs/_data/shops.yaml
+++ b/docs/_data/shops.yaml
@@ -1,20 +1,14 @@
 - address: 2890 Tata, Tóvárosi korzó 2.
-  phone: +36 34 / 586 - 514, +36 34 / 482 - 002
+  phone: +36 34 586 514, +36 34 482 002
   openingTime: "H-P 9-17.30 Szombat: 9-12"
   mapsLink: "https://goo.gl/maps/UYfpXvU6vj5nJCHx5"
 
 - address: 2890 Tata, Ady Endre. út 15.
-  phone: +36 34 / 656 - 866
+  phone: +36 34 656 866
   openingTime: "H-P 9-17.30 Szombat: 9-12"
   mapsLink: "https://goo.gl/maps/t22PU8EtQyWkyTMq7"
 
 - address: 2800 Tatabánya, Dózsakert utca 58.
-  phone: "+36 34 / 308 - 683"
+  phone: "+36 34 308 683"
   openingTime: "H-P 9-17.30"
   mapsLink: "https://goo.gl/maps/YFPjaBbvpTEyATtx9"
-
-# - address: 2800 Tatabánya, Magyary Z. u. 2. (régi Ságvári E. út 46.)
-#   phone: "+36 34 / 951 - 074"
-#   openingTime: "H-P 9-17.00"
-#   mapsLink: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2692.235438776386!2d18.409782600000003!3d47.563207399999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476a408b92469dc7%3A0x19bf4b12392feab0!2zU8OhZ3bDoXJpIEVuZHJlIMO6dCA0NiwgVGF0YWLDoW55YSwgMjgwMA!5e0!3m2!1shu!2shu!4v1435100453475"
-  
