--- a/docs/_data/shops.yaml
+++ b/docs/_data/shops.yaml
@@ -3,7 +3,7 @@
   openingTime: "H-P 9-17.30 Szombat: 9-12"
   mapsLink: "https://goo.gl/maps/UYfpXvU6vj5nJCHx5"
 
-- address: 2890 Tata, Ady Endre. út 15.
+- address: 2890 Tata, Ady Endre út 15.
   phone: +36 34 656 866
   openingTime: "H-P 9-17.30 Szombat: 9-12"
   mapsLink: "https://goo.gl/maps/t22PU8EtQyWkyTMq7"
