--- a/docs/_data/shops.yaml
+++ b/docs/_data/shops.yaml
@@ -8,7 +8,7 @@
   openingTime: "H-P 9-17.30 Szombat: 9-12"
   mapsLink: "https://goo.gl/maps/t22PU8EtQyWkyTMq7"
 
-- address: 2800 Tatabánya, Dózsakert utca 58.
+- address: 2800 Tatabánya, Dózsakert 58.
   phone: "+36 34 308 683"
   openingTime: "H-P 9-17.30"
   mapsLink: "https://goo.gl/maps/YFPjaBbvpTEyATtx9"
